plugins {
    id 'java'
    id 'application'
}

repositories {
    maven {
        url uri("${projectDir}/maven")
    }

    mavenCentral()
}

dependencies {
    implementation 'io.javalin:javalin:3.13.13'
    implementation 'io.javalin:javalin-openapi:3.13.13'
    implementation 'ch.qos.logback:logback-classic:1.2.11'
    implementation 'org.javaswift:joss:0.10.4.1'
    implementation 'org.openslide:openslide:3.4.1_2'
    implementation 'com.google.code.gson:gson:2.9.1'
    implementation 'net.dongliu:gson-java8-datatype:1.1.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    implementation 'org.apache.commons:commons-compress:1.21'
    implementation 'commons-validator:commons-validator:1.7'
    implementation 'com.auth0:java-jwt:3.19.2'
    implementation 'com.auth0:jwks-rsa:0.21.1'
    implementation 'com.microsoft.azure:msal4j:1.13.0'
    implementation 'com.typesafe:config:1.4.2'
    implementation 'com.h2database:h2:1.4.195'
    implementation 'org.hibernate:hibernate-c3p0:5.6.10.Final'
    implementation 'org.flywaydb:flyway-core:8.5.13'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation 'org.mockito:mockito-core:3.2.4'
    testImplementation 'com.konghq:unirest-java:3.13.0'
    testImplementation 'org.assertj:assertj-core:3.21.0'
}

mainClassName = 'fi.ylihallila.server.Main'
group = 'fi.yli-hallila'
version = '1.1-SNAPSHOT'
description = 'Open Microanatomy Server'
java.sourceCompatibility = JavaVersion.VERSION_16

jar {
    duplicatesStrategy = 'warn'

    manifest {
        attributes('Implementation-Title': project.name,
                   'Implementation-Version': project.version,
                   'Main-Class': mainClassName)
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    archivesBaseName = rootProject.name + "-" + getBuildDate()

    exclude 'META-INF/*.RSA'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
}

static def getBuildDate() {
    return new Date().format('ddMMyy')
}
